맨위로 버튼 생성

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -59,7 +59,7 @@
                 if(loginUser == 0){
                     alert("로그인 후 이용해주세요");
                 }else if(loginUser > 0){
-                    location.href="http://localhost:8080/item/new";
+                    location.href="http://localhost:8080/item/qna";
                 }
             }
             /*]]*/
