--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -12,6 +12,7 @@
             <link rel="stylesheet" href="/css/maicons.css">
             <link rel="stylesheet" href="/vendor/owl-carousel/css/owl.carousel.css">
             <link rel="stylesheet" href="/css/theme.css">
+            <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
             <style>
                 .fieldError {
