--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -10286,6 +10286,10 @@ a.text-dark:hover, a.text-dark:focus {
   padding-bottom: 20px;
 }
 
+.loginForm{
+  width:416px;
+}
+
 .login-id{
   margin-left: 350px;
   margin-right: 350px;
@@ -10361,5 +10365,36 @@ a.text-dark:hover, a.text-dark:focus {
   opacity: 1;
   visibility: visible;
 }
+
+
+.form-control::file-selector-button {
+  padding: 0.375rem 0.75rem;
+  margin: -0.375rem -0.75rem;
+  -webkit-margin-end: 0.75rem;
+  margin-inline-end: 0.75rem;
+  color: #212529;
+  background-color: #e9ecef;
+  pointer-events: none;
+  border-color: inherit;
+  border-style: solid;
+  border-width: 0;
+  border-inline-end-width: 1px;
+  border-radius: 0;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+
+.detail-hide{
+  position: absolute;
+  clip: rect(0, 860px,1200px, 0);
+}
+
+
+.detail-relative{
+  position: relative;
+  width: 860px;
+  height: 1200px;
+}
+
 
 /*# sourceMappingURL=bootstrap.css.map */
