--- a/src/main/resources/templates/menu/product/newitem.html
+++ b/src/main/resources/templates/menu/product/newitem.html
@@ -12,19 +12,21 @@
                         <p th:if="${#fields.hasErrors('pdct_name')}" th:errors="*{pdct_name}">Incorrect date</p>
                     </div>
                     <div class="col-sm-5 login-id">
-                        <input type="text" class="form-control" th:field="*{pdct_price}" th:placeholder="상품가격" th:class="${#fields.hasErrors('pdct_price')}  ? 'form-control fieldError' : 'form-control'">
+                        <input type="text" class="form-control"  th:field="*{pdct_price}" th:placeholder="상품가격"  th:class="${#fields.hasErrors('pdct_price')}  ? 'form-control fieldError' : 'form-control'">
                         <p th:if="${#fields.hasErrors('pdct_price')}" th:errors="*{pdct_price}">Incorrect date</p>
                     </div>
                     <div class="col-sm-5 login-id">
                         <input type="text" class="form-control" th:field="*{pdct_quantity}" th:placeholder="상품재고" th:class="${#fields.hasErrors('pdct_quantity')}  ? 'form-control fieldError' : 'form-control'">
                         <p th:if="${#fields.hasErrors('pdct_quantity')}" th:errors="*{pdct_quantity}">Incorrect date</p>
                     </div>
-                    <div class="col-sm-5 login-id">
-                        <input type="file" class="form-control" th:field="*{pdct_image}" th:placeholder="상품이름" th:class="${#fields.hasErrors('pdct_image')}  ? 'form-control fieldError' : 'form-control'">
+                    <div class="col-sm-2 login-id">
+                        <label th:for="*{pdct_image}">썸네일 사진</label>
+                        <input type="file" class="form-control" th:field="*{pdct_image}" th:placeholder="상품사진" th:class="${#fields.hasErrors('pdct_image')}  ? 'form-control fieldError' : 'form-control'">
                         <p th:if="${#fields.hasErrors('pdct_image')}" th:errors="*{pdct_image}">Incorrect date</p>
                     </div>
-                    <div class="col-sm-5 login-id">
-                        <input type="file" class="form-control-file" th:field="*{detail_image}" th:placeholder="상세이미지" th:class="${#fields.hasErrors('detail_image')}  ? 'form-control fieldError' : 'form-control'">
+                    <div class="col-sm-3 login-id">
+                        <label th:for="*{detail_image}">상세 사진</label>
+                        <input type="file" class="form-control-file float-right" th:field="*{detail_image}" th:placeholder="상세이미지" th:class="${#fields.hasErrors('detail_image')}  ? 'form-control fieldError' : 'form-control'">
                         <p th:if="${#fields.hasErrors('detail_image')}" th:errors="*{detail_image}">Incorrect date</p>
                     </div>
                     <div class="col-sm-5 login-id">
@@ -34,9 +36,24 @@
                     <div class="col-sm-5 login-id">
                         <input type="text" name="seller" class="form-control" th:value="${session.loginUser.getUser_name()}" th:placeholder="판매자" readonly="true">
                     </div>
-                    <button class="btn btn-primary" type="submit">제출</button>
+                    <div class="col-sm-5 login-id">
+                        <button class="btn btn-primary col-sm-12" type="submit">제출</button>
+                    </div>
                 </div>
             </form>
         </div>
     </div>
+
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        document.addEventListener('DOMContentLoaded', () => {
+            var chk = /*[[${imageNull}]]*/;
+            if(chk != null){
+                alert("이미지를 등록해주세요");
+            }
+
+        });
+
+        /*]]*/
+    </script>
 </main>
