문의사항 수정, 문의 답글 추가하기

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -44,22 +44,22 @@
         <script th:inline="javascript">
             /*<![CDATA[*/
             function upload(loginUser){
-                var uploadPage = "http://localhost:8080/item/new";
+                var uploadPage = "/item/new";
 
                 if(loginUser == 0){
                     alert("로그인 후 이용해주세요");
                 }else if(loginUser > 0){
-                    location.href="http://localhost:8080/item/new";
+                    location.href="/item/new";
                 }
             }
 
             function contact(loginUser){
-                var uploadPage = "http://localhost:8080/item/new";
+                var uploadPage = "/item/new";
 
                 if(loginUser == 0){
                     alert("로그인 후 이용해주세요");
                 }else if(loginUser > 0){
-                    location.href="http://localhost:8080/item/qna";
+                    location.href="/item/qna";
                 }
             }
             /*]]*/
