--- a/src/main/resources/templates/user/userPage.html
+++ b/src/main/resources/templates/user/userPage.html
@@ -15,6 +15,9 @@
                     <div class="col-sm-5 login-id">
                         <a th:href="@{/item/qnaList/} + ${session.loginUser.getUser_id()}" class="btn btn-primary col-md-12">문의 내역</a>
                     </div>
+                    <div class="col-sm-5 login-id">
+                        <a th:href="@{/item/seller/} + ${session.loginUser.getUser_id()}" class="btn btn-primary col-md-12">판매내역</a>
+                    </div>
                 </div>
             </form>
         </div>
